# civitai-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  civitai.go  (+1 more)
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  civitai_sdk.py  civitai_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  error.py  result.py
py/entity/: creator_entity.py  image_entity.py  model_entity.py  model_version_entity.py  tag_entity.py
py/feature/: audit_feature.py  base_feature.py  debug_feature.py  metrics_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_creator_direct.py  test_creator_entity.py  test_exists.py  test_image_direct.py  test_image_entity.py  test_model_direct.py  test_model_entity.py  test_model_version_direct.py  test_model_version_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_tag_direct.py  test_tag_entity.py
py/utility/: clean.py  done.py  feature_init.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  prepare_auth.py  prepare_headers.py  prepare_method.py  prepare_path.py  result_basic.py  result_headers.py  transform_request.py
(+505 files in other folders)
